# AFIT-CSCE689-HW3-S

./: README.md  configure.ac  first50kprimes.txt
build-aux/: dir_use.txt
include/: PCalc.h  PCalc_SP.h  PCalc_T.h
m4/: dir_use.txt
src/: Makefile.am  PCalc.cpp  PCalc_SP.cpp  PCalc_T.cpp  main.cpp
